--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,7 @@
 .contenedorUsers,
 .contenedorProducts,
-.subContenedorCategories  {
+.subContenedorCategories,
+.contProdDetail  {
   background: rgb(36, 35, 35);
   color: white;
   padding: 20px;
@@ -29,3 +30,5 @@ i {
   border-bottom: 2px solid black;
   display: inline-block
 }
+
+
