--- a/src/App.css
+++ b/src/App.css
@@ -1,13 +1,22 @@
+body {
+  background-color: #ffffff;
+background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='4' height='4' viewBox='0 0 4 4'%3E%3Cpath fill='%23b997ef' fill-opacity='0.4' d='M1 3h1v1H1V3zm2-2h1v1H3V1z'%3E%3C/path%3E%3C/svg%3E");
+}
+
 .contenedorUsers,
 .contenedorProducts,
 .subContenedorCategories,
-.contProdDetail  {
+.contProdDetail {
   background: rgb(36, 35, 35);
   color: white;
   padding: 20px;
   border-radius: 10px;
   box-shadow: 7px 7px 10px 0px rgb(169, 168, 168);
   border: 1px solid black;
+}
+
+.contProdDetail {
+  display: flex;
 }
 
 .contenedorCategories {
@@ -36,11 +45,17 @@ i {
 }
 
 .contCardProducts {
-  width: 23%;
+  width: 32%;
   margin-right: 10px;
   box-shadow: 7px 7px 10px 0px rgb(169, 168, 168);
   background: rgb(36, 35, 35);
   color: white;
   border-radius: 10px;
   padding: 15px;
+}
+
+.contCardProducts img {
+  width: 100%;
+  height: 45%;
+  margin-bottom: 20px;
 }
