--- a/src/App.css
+++ b/src/App.css
@@ -21,7 +21,7 @@ background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/s
 
 .contProdDetail {
   display: flex;
-  height: 310px;
+  height: auto;
 }
 
 .contenedorCategories {
