--- a/src/App.css
+++ b/src/App.css
@@ -49,15 +49,20 @@ i {
   text-decoration: line-through;
 }
 
-.contCardProducts {
+.contCardProducts,
+.contCategoryDetail {
   width: 23%;
   margin-right: 10px;
-  color: white;
+  background: white;
   border-radius: 10px;
   padding: 15px;
+  margin-bottom: 20px;
+  display: flex;
+  flex-direction: column;
 }
 
-.contCardProducts img {
+.contCardProducts img,
+.contCategoryDetail img {
   width: 100%;
   height: 45%;
   margin-bottom: 20px;
